# CompountInterestAPI

./: .gitignore  Dockerfile  README.md  client.py  k8s-manifest.yaml  pyproject.toml  requirements.txt  terraform_script.tf  test.py
compountinterestapi/: main.py
