[tool.poetry]
name = "compountinterestapi"
version = "0.0.1"
description = "An API that can be used to see the impact of compount interest."
authors = ["JJ <4843736+espin086@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
